Fix visibility of dropboxes

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -52,13 +52,13 @@ ul.popover{
     width: 251px;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    visibility: hidden;
+    visibility: collapse;
     line-height: normal;
     margin-top: 4px;
     margin-left: -41px;
     height: 200px;
 }
-.locations:hover ul.popover{
+.locations:hover .amenities:hover ul.popover{
     display: block;
     visibility: visible;
 
